# s3-redshift-etl

./: README.md  create_tables.py  etl.py  pyproject.toml  sql_queries.py
