[tool.poetry]
name = "sparkify-data-warehouse-etl"
version = "0.1.0"
description = ""
authors = ["Tarik El Lel <tareklel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.55"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
